| Bug #41077 | Warning contains wrong future version | ||
|---|---|---|---|
| Submitted: | 27 Nov 2008 17:07 | Modified: | 15 Mar 2009 2:58 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S3 (Non-critical) |
| Version: | 5.1.30 | OS: | Any |
| Assigned to: | Davi Arnaut | Target Version: | 5.1+ |
| Triage: | Triaged: D4 (Minor) | ||
[27 Nov 2008 17:07]
Andrew Hutchings
[27 Nov 2008 22:34]
Sveta Smirnova
Thank you for the report. Verified as described.
[18 Feb 2009 17:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66784 2802 Davi Arnaut 2009-02-16 Bug#41077: Warning contains wrong future version Substitute all references of MySQL version "5.2" to "6.0" in deprecation warning messages.Deprecated constructs are being removed in the 6.0 tree.
[19 Feb 2009 13:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66907 2805 Davi Arnaut 2009-02-16 Bug#41077: Warning contains wrong future version Substitute all references of MySQL version "5.2" to "6.0" in deprecation warning messages.Deprecated constructs are being removed in the 6.0 tree.
[19 Feb 2009 13:59]
Davi Arnaut
Queued to 5.1-bugteam
[19 Feb 2009 14:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66910 3064 Davi Arnaut 2009-02-19 [merge] Null merge of Bug#41077 into 6.0-bugteam.
[13 Mar 2009 19:07]
Bugs System
Pushed into 5.1.33 (revid:joro@sun.com-20090313111355-7bsi1hgkvrg8pdds) (version source revid:sergey.glukhov@sun.com-20090219145249-0a1n8ve70ykf2uj1) (merge vers: 5.1.33) (pib:6)
[15 Mar 2009 2:58]
Paul DuBois
Noted in 5.1.33 changelog. Deprecation warnings that referred to MySQL 5.2 were changed to refer to MySQL 6.0.
[18 Mar 2009 13:16]
Bugs System
Pushed into 6.0.11-alpha (revid:joro@sun.com-20090318122208-1b5kvg6zeb4hxwp9) (version source revid:sergey.glukhov@sun.com-20090219145541-3y9ogqvhqvo7y2i4) (merge vers: 6.0.10-alpha) (pib:6)
[9 May 2009 16:45]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (version source revid:jonas@mysql.com-20090508100057-30ote4xggi4nq14v) (merge vers: 5.1.33-ndb-6.2.18) (pib:6)
[9 May 2009 17:42]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (version source revid:jonas@mysql.com-20090508175813-s6yele2z3oh6o99z) (merge vers: 5.1.33-ndb-6.3.25) (pib:6)
[9 May 2009 18:40]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (version source revid:jonas@mysql.com-20090509073226-09bljakh9eppogec) (merge vers: 5.1.33-ndb-7.0.6) (pib:6)
